feat: 私聊发送文件；重构Netty模块的消息处理器；

--- a/hello-server/client/client-1.html
+++ b/hello-server/client/client-1.html
@@ -27,7 +27,7 @@
         msg: {
             sequenceId: '1234123',
             senderId: 1,
-            content: 'Hello! I am Client-1',
+            content: 'Hello, I am Test-User-1!',
             receiverId: 2,
             type: 2,
         },
