--- a/hello-server/client/client-2.html
+++ b/hello-server/client/client-2.html
@@ -27,7 +27,7 @@
         msg: {
             sequenceId: '123',
             senderId: 2,
-            content: 'Hello! I am Client-2',
+            content: 'Hello, I am Test-User-2',
             receiverId: 1,
             type: 2,
         },
